// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders as a h4 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  border-color: #CCCCCC;
  border-width: 1px;
  border-style: solid;
}

.emotion-12 {
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-13 {
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  padding-inline: 12px;
  padding-block: 12px;
}

<div
    class="emotion-0"
  >
    <h4
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        aria-expanded="true"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
            />
          </svg>
        </div>
      </button>
    </h4>
    <div
      class="emotion-11"
    >
      <hr
        aria-hidden="true"
        class="emotion-12"
        data-testid="divider"
      />
    </div>
    <div
      aria-labelledby="mock-nk-1"
      class="emotion-13"
      id="mock-nk-1"
      role="region"
    >
      <p
        class="emotion-1"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada lacus ex, sit amet blandit leo lobortis eget.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with collapsed state and icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        aria-expanded="false"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with default props 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-4 svg {
  fill: #2E2E2E;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          Header
        </div>
        <div
          class="emotion-4"
        >
          Label
        </div>
      </button>
    </h3>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with disabled state 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: not-allowed;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        class="emotion-2"
        disabled=""
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with expanded state and icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  border-color: #CCCCCC;
  border-width: 1px;
  border-style: solid;
}

.emotion-12 {
  border-style: solid;
  border-color: #DEDEDE;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-13 {
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  padding-inline: 12px;
  padding-block: 12px;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        aria-expanded="true"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </button>
    </h3>
    <div
      class="emotion-11"
    >
      <hr
        aria-hidden="true"
        class="emotion-12"
        data-testid="divider"
      />
    </div>
    <div
      aria-labelledby="mock-nk-1"
      class="emotion-13"
      id="mock-nk-1"
      role="region"
    >
      <p
        class="emotion-1"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada lacus ex, sit amet blandit leo lobortis eget.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with no divider 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  padding-inline: 12px;
  padding-block: 12px;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        aria-expanded="true"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
            />
          </svg>
        </div>
      </button>
    </h3>
    <div
      aria-labelledby="mock-nk-1"
      class="emotion-11"
      id="mock-nk-1"
      role="region"
    >
      <p
        class="emotion-1"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada lacus ex, sit amet blandit leo lobortis eget.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion renders with startEnhancer 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  cursor: default;
  background-color: #FFFFFF;
  color: #2E2E2E;
  border-style: none none solid none;
  border-color: #CCCCCC;
  border-width: 1px;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2>:not(:last-of-type) {
  margin-right: 8px;
}

.emotion-2:hover:not(:disabled) {
  background-color: #FAFAFA;
  color: #3358CC;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #2E2E2E;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 24px;
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <h3
      class="emotion-1"
    >
      <button
        aria-controls="mock-nk-1"
        class="emotion-2"
        id="mock-nk-1"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <rect
              height="7"
              width="3"
              x="4"
              y="10"
            />
            <rect
              height="7"
              width="3"
              x="10.5"
              y="10"
            />
            <rect
              height="3"
              width="20"
              x="2"
              y="19"
            />
            <rect
              height="7"
              width="3"
              x="17"
              y="10"
            />
            <polygon
              points="12,1 2,6 2,8 22,8 22,6"
            />
          </svg>
        </div>
        <div
          class="emotion-6"
        >
          Header
        </div>
        <div
          class="emotion-3"
        >
          Label
        </div>
      </button>
    </h3>
  </div>
</DocumentFragment>
`;
